--- a/index.html
+++ b/index.html
@@ -1,93 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-</head>
-<body>
+    <!-- Modern normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- My stylesheet -->
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body class="whole-page">
     <!-- Page Header -->
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-              <li><a href="#">Studio</a></li>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Contacts</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul>
-             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-             </li>
-             <li>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-             </li>
-            </ul>
-        </address>
+    <header class="header-page">
+      <nav class="nav-page">
+        <a class="logo-link underline" href="./index.html">WebStudio</a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link-special underline" href="#">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link underline" href="#">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link underline" href="#">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="contact-page">
+        <ul class="contact-menu list">
+          <li class="contact-menu-item">
+            <a class="contact-menu-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="contact-menu-item">
+            <a class="contact-menu-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
-    <main>
-        <!-- Hero section -->
-        <section>
-            <h1>effective solutions for your business</h1>
-            <button type="button">Order Service</button>
-        </section>
-        <!-- Business' directions  -->
-        <section>
-            <h2>Temp</h2> 
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
-        </section>
-        <!-- Staff -->
-        <section>
-            <h2>Our Team</h2>
-                <ul>
-                     <li>
-                        <img src="./images/People/first-men.jpg" width="264" alt="Mark Guerrero - a man with a blue shirt and black beard">
-                        <h3>Mark Guerrero</h3>
-                        <p>Product Designer</p>
-                     </li>
-                     <li>
-                         <img src="./images/People/second-men.jpg" width="264" alt="Tom Ford - a man with a blue shirt, looking on his left">
-                         <h3>Tom Ford</h3>
-                         <p>Frontend Developer</p>
-                     </li>
-                     <li>
-                         <img src="./images/People/woman.jpg" width="264" alt="Camila Garcia - a young women in a pimk sweater">
-                         <h3>Camila Garcia</h3>
-                         <p>Marketing</p>
-                     </li>
-                     <li>
-                         <img src="./images/People/third-men.jpg" width="264" alt="Daniel Wilson - a young men is a grey T-shirt">
-                         <h3>Daniel Wilson</h3>
-                         <p>UI Designer</p>
-                     </li>
-                 </ul>
-        </section>
+    <main class="main-section">
+      <!-- Hero section -->
+      <section class="hero">
+        <h1 class="hero-title">effective solutions for your business</h1>
+        <button class="hero-button" type="button">Order Service</button>
+      </section>
+      <!-- Business' directions  -->
+      <section class="goals-section">
+        <h2 class="temporary">Temp</h2>
+        <ul class="goals-menu list">
+          <li class="goals-menu-item">
+            <h3 class="goals-title">Strategy</h3>
+            <p class="goals-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li class="goals-menu-item">
+          <li>
+            <h3 class="goals-title">Punctuality</h3>
+            <p class="goals-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li class="goals-menu-item">
+          <li>
+            <h3 class="goals-title">Diligence</h3>
+            <p class="goals-text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li class="goals-menu-item">
+          <li>
+            <h3 class="goals-title">Technologies</h3>
+            <p class="goals-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Staff -->
+      <section>
+        <h2 class="staff-title">Our Team</h2>
+        <ul class="staff-menu list">
+          <li class="staff-menu-item">
+            <img class="staff-menu-img"
+              src="./images/People/first-men.jpg"
+              width="264"
+              alt="Mark Guerrero - a man with a blue shirt and black beard"
+            />
+            <h3 class="staff-name">Mark Guerrero</h3>
+            <p class="staff-occupation">Product Designer</p>
+          </li>
+          <li class="staff-menu-item">
+            <img class="staff-menu-img"
+              src="./images/People/second-men.jpg"
+              width="264"
+              alt="Tom Ford - a man with a blue shirt, looking on his left"
+            />
+            <h3 class="staff-name">Tom Ford</h3>
+            <p class="staff-occupation">Frontend Developer</p>
+          </li>
+          <li class="staff-menu-item">
+            <img class="staff-menu-img"
+              src="./images/People/woman.jpg"
+              width="264"
+              alt="Camila Garcia - a young women in a pimk sweater"
+            />
+            <h3 class="staff-name">Camila Garcia</h3>
+            <p class="staff-occupation">Marketing</p>
+          </li>
+          <li class="staff-menu-item">
+            <img class="staff-menu-img"
+              src="./images/People/third-men.jpg"
+              width="264"
+              alt="Daniel Wilson - a young men is a grey T-shirt"
+            />
+            <h3 class="staff-name">Daniel Wilson</h3>
+            <p class="staff-occupation">UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Footer -->
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+    <footer class="footer-section">
+      <a class="footer-link underline" href="./index.html">WebStudio</a>
+      <p class="text-footer">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
