--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
     <!-- Page Header -->
     <header class="header-page">
       <nav class="nav-page">
-        <a class="logo-link underline" href="./index.html">WebStudio</a>
-        <ul class="menu list">
+        <a class="logo-link underline" href="./index.html"><span class="first-part">Web</span><span class="second-part">Studio</span></a>
+        <ul class="menu-list list">
           <li class="menu-item">
-            <a class="menu-link-special underline" href="#">Studio</a>
+            <a class="menu-link-special underline " href="#">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link underline" href="#">Portfolio</a>
+            <a class="menu-link-special underline" href="#">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link underline" href="#">Contacts</a>
+            <a class="menu-link-special underline" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="contact-page">
         <ul class="contact-menu list">
           <li class="contact-menu-item">
-            <a class="contact-menu-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-menu-link underline" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="contact-menu-item">
-            <a class="contact-menu-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact-menu-link underline" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -50,7 +50,7 @@
     <main class="main-section">
       <!-- Hero section -->
       <section class="hero">
-        <h1 class="hero-title">effective solutions for your business</h1>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-button" type="button">Order Service</button>
       </section>
       <!-- Business' directions  -->
@@ -132,7 +132,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer-section">
-      <a class="footer-link underline" href="./index.html">WebStudio</a>
+      <a class="footer-link underline" href="./index.html"><span class="first-part">Web</span><span class="second-part">Studio</span></a>
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
