--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;1,700&display=swap" rel="stylesheet">
+    
     <!-- My stylesheet -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -63,22 +61,22 @@
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
-          </li class="goals-menu-item">
-          <li>
+          </li>
+          <li class="goals-menu-item">
             <h3 class="goals-title">Punctuality</h3>
             <p class="goals-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
-          </li class="goals-menu-item">
-          <li>
+          </li>
+          <li class="goals-menu-item">
             <h3 class="goals-title">Diligence</h3>
             <p class="goals-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
-          </li class="goals-menu-item">
-          <li>
+          </li>
+          <li class="goals-menu-item">
             <h3 class="goals-title">Technologies</h3>
             <p class="goals-text">
               Design practice focused on digital experiences. We bring forth a
