--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;1,700&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- My stylesheet -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -21,26 +24,36 @@
     <!-- Page Header -->
     <header class="header-page">
       <nav class="nav-page">
-        <a class="logo-link underline" href="./index.html"><span class="first-part">Web</span><span class="second-part">Studio</span></a>
+        <a class="logo-link underline" href="./index.html"
+          >Web<span class="second-part">Studio</span></a
+        >
         <ul class="menu-list list">
           <li class="menu-item">
-            <a class="menu-link-special underline " href="#">Studio</a>
+            <a class="menu-link-special underline" href="./index.html"
+              >Studio</a
+            >
           </li>
           <li class="menu-item">
-            <a class="menu-link-special underline" href="#">Portfolio</a>
+            <a class="menu-link-special underline" href="">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link-special underline" href="#">Contacts</a>
+            <a class="menu-link-special underline" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="contact-page">
         <ul class="contact-menu list">
           <li class="contact-menu-item">
-            <a class="contact-menu-link underline" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a
+              class="contact-menu-link underline"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact-menu-item">
-            <a class="contact-menu-link underline" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact-menu-link underline" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -53,7 +66,7 @@
       </section>
       <!-- Business' directions  -->
       <section class="goals-section">
-        <h2 class="temporary">Temp</h2>
+        <h2 class="second-section">Temp</h2>
         <ul class="goals-menu list">
           <li class="goals-menu-item">
             <h3 class="goals-title">Strategy</h3>
@@ -90,7 +103,8 @@
         <h2 class="staff-title">Our Team</h2>
         <ul class="staff-menu list">
           <li class="staff-menu-item">
-            <img class="staff-menu-img"
+            <img
+              class="staff-menu-img"
               src="./images/People/first-men.jpg"
               width="264"
               alt="Mark Guerrero - a man with a blue shirt and black beard"
@@ -99,7 +113,8 @@
             <p class="staff-occupation">Product Designer</p>
           </li>
           <li class="staff-menu-item">
-            <img class="staff-menu-img"
+            <img
+              class="staff-menu-img"
               src="./images/People/second-men.jpg"
               width="264"
               alt="Tom Ford - a man with a blue shirt, looking on his left"
@@ -108,7 +123,8 @@
             <p class="staff-occupation">Frontend Developer</p>
           </li>
           <li class="staff-menu-item">
-            <img class="staff-menu-img"
+            <img
+              class="staff-menu-img"
               src="./images/People/woman.jpg"
               width="264"
               alt="Camila Garcia - a young women in a pimk sweater"
@@ -117,7 +133,8 @@
             <p class="staff-occupation">Marketing</p>
           </li>
           <li class="staff-menu-item">
-            <img class="staff-menu-img"
+            <img
+              class="staff-menu-img"
               src="./images/People/third-men.jpg"
               width="264"
               alt="Daniel Wilson - a young men is a grey T-shirt"
@@ -130,7 +147,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer-section">
-      <a class="footer-link underline" href="./index.html"><span class="first-part">Web</span><span class="second-part">Studio</span></a>
+      <a class="footer-link underline" href="./index.html">Web<span class="footer-second-part">Studio</span></a>
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
