--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
         </ul>
       </section>
       <!-- Staff -->
-      <section>
+      <section class="team-section">
         <h2 class="staff-title">Our Team</h2>
         <ul class="staff-menu list">
           <li class="staff-menu-item">
             <img
               class="staff-menu-img"
-              src="./images/People/first-men.jpg"
+              src="./images/people/first-men.jpg"
               width="264"
               alt="Mark Guerrero - a man with a blue shirt and black beard"
             />
@@ -115,7 +115,7 @@
           <li class="staff-menu-item">
             <img
               class="staff-menu-img"
-              src="./images/People/second-men.jpg"
+              src="./images/people/second-men.jpg"
               width="264"
               alt="Tom Ford - a man with a blue shirt, looking on his left"
             />
@@ -125,7 +125,7 @@
           <li class="staff-menu-item">
             <img
               class="staff-menu-img"
-              src="./images/People/woman.jpg"
+              src="./images/people/woman.jpg"
               width="264"
               alt="Camila Garcia - a young women in a pimk sweater"
             />
@@ -135,7 +135,7 @@
           <li class="staff-menu-item">
             <img
               class="staff-menu-img"
-              src="./images/People/third-men.jpg"
+              src="./images/people/third-men.jpg"
               width="264"
               alt="Daniel Wilson - a young men is a grey T-shirt"
             />
@@ -144,10 +144,77 @@
           </li>
         </ul>
       </section>
+      <section class="portfolio-section">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-menu list">
+          <li class="portfolio-menu-item">
+            <img
+              class="portfolio-menu-img"
+              src="./images/our portfolio/bank.jpg"
+              width="360"
+              alt="Banking App"
+            />
+            <h3 class="portfolio-name">Banking App</h3>
+            <p class="portfolio-mathod">App</p>
+          </li>
+          <li class="portfolio-menu-item">
+            <img
+              class="portfolio-menu-img"
+              src="./images/our portfolio/contactless.jpg"
+              width="360"
+              alt="Cashless Payment"
+            />
+            <h3 class="portfolio-name">Cashless Payment</h3>
+            <p class="portfolio-mathod">Marketing</p>
+          </li>
+          <li class="portfolio-menu-item">
+            <img
+              class="portfolio-menu-img"
+              src="./images/our portfolio/laptop.jpg"
+              width="360"
+              alt="Laptop screen"
+            />
+            <h3 class="portfolio-name">Meditation App</h3>
+            <p class="portfolio-mathod">App</p>
+          </li>
+          <li class="portfolio-menu-item">
+            <img
+              class="portfolio-menu-img"
+              src="./images/our portfolio/taxi.jpg"
+              width="360"
+              alt="driving wheel"
+            />
+            <h3 class="portfolio-name">Taxi Service</h3>
+            <p class="portfolio-mathod">Marketing</p>
+          </li>
+          <li class="portfolio-menu-item">
+            <img
+              class="portfolio-menu-img"
+              src="./images/our portfolio/screen.jpg"
+              width="360"
+              alt="Screen Illustrations"
+            />
+            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <p class="portfolio-mathod">Design</p>
+          </li>
+          <li class="portfolio-menu-item">
+            <img
+              class="portfolio-menu-img"
+              src="./images/our portfolio/online.jpg"
+              width="360"
+              alt="Girl with the headphones"
+            />
+            <h3 class="portfolio-name">Online Courses</h3>
+            <p class="portfolio-mathod">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Footer -->
     <footer class="footer-section">
-      <a class="footer-link underline" href="./index.html">Web<span class="footer-second-part">Studio</span></a>
+      <a class="footer-link underline" href="./index.html"
+        >Web<span class="footer-second-part">Studio</span></a
+      >
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
