--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
         <ul class="portfolio-menu list">
           <li class="portfolio-menu-item">
             <img
-              class="portfolio-menu-img"
-              src="./images/our portfolio/bank.jpg"
+              src="./images/portfolio/bank.jpg" class="portfolio-menu-img"
               width="360"
               alt="Banking App"
             />
@@ -159,8 +158,7 @@
           </li>
           <li class="portfolio-menu-item">
             <img
-              class="portfolio-menu-img"
-              src="./images/our portfolio/contactless.jpg"
+              src="./images/portfolio/contactless.jpg" class="portfolio-menu-img"
               width="360"
               alt="Cashless Payment"
             />
@@ -169,8 +167,7 @@
           </li>
           <li class="portfolio-menu-item">
             <img
-              class="portfolio-menu-img"
-              src="./images/our portfolio/laptop.jpg"
+              src="./images/portfolio/laptop.jpg" class="portfolio-menu-img"
               width="360"
               alt="Laptop screen"
             />
@@ -179,18 +176,16 @@
           </li>
           <li class="portfolio-menu-item">
             <img
-              class="portfolio-menu-img"
-              src="./images/our portfolio/taxi.jpg"
+              src="./images/portfolio/taxi.jpg" class="portfolio-menu-img"
               width="360"
-              alt="driving wheel"
+              alt="Driving wheel"
             />
             <h3 class="portfolio-name">Taxi Service</h3>
             <p class="portfolio-mathod">Marketing</p>
           </li>
           <li class="portfolio-menu-item">
             <img
-              class="portfolio-menu-img"
-              src="./images/our portfolio/screen.jpg"
+              src="./images/portfolio/screen.jpg" class="portfolio-menu-img"
               width="360"
               alt="Screen Illustrations"
             />
@@ -199,8 +194,7 @@
           </li>
           <li class="portfolio-menu-item">
             <img
-              class="portfolio-menu-img"
-              src="./images/our portfolio/online.jpg"
+              src="./images/portfolio/online.jpg" lass="portfolio-menu-img"
               width="360"
               alt="Girl with the headphones"
             />
