--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
           </li>
         </ul>
       </section>
+      
       <section class="portfolio-section">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-menu list">
@@ -194,7 +195,7 @@
           </li>
           <li class="portfolio-menu-item">
             <img
-              src="./images/portfolio/online.jpg" lass="portfolio-menu-img"
+              src="./images/portfolio/online.jpg" class="portfolio-menu-img"
               width="360"
               alt="Girl with the headphones"
             />
