--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         >
         <ul class="menu-list list">
           <li class="menu-item">
-            <a class="menu-link-specially
+            <a class="menu-link-special
             underline" href="./index.html"
               >Studio</a
             >
