--- a/index.html
+++ b/index.html
@@ -104,42 +104,22 @@
         <h2 class="staff-title">Our Team</h2>
         <ul class="staff-menu list">
           <li class="staff-menu-item">
-            <img
-              src="./images/people/first-men.jpg"
-              class="staff-menu-img"
-              width="264"
-              alt="Mark Guerrero - a man with a blue shirt and black beard"
-            />
+            <img src="./images/people/first-men.jpg" class="staff-menu-img" width="264" alt="Mark Guerrero - a man with a blue shirt and black beard"/>
             <h3 class="staff-name">Mark Guerrero</h3>
             <p class="staff-occupation">Product Designer</p>
           </li>
           <li class="staff-menu-item">
-            <img
-              src="./images/people/second-men.jpg"
-              class="staff-menu-img"
-              width="264"
-              alt="Tom Ford - a man with a blue shirt, looking on his left"
-            />
+            <img src="./images/people/second-men.jpg" class="staff-menu-img" width="264" alt="Tom Ford - a man with a blue shirt, looking on his left"/>
             <h3 class="staff-name">Tom Ford</h3>
             <p class="staff-occupation">Frontend Developer</p>
           </li>
           <li class="staff-menu-item">
-            <img
-              src="./images/people/woman.jpg"
-              class="staff-menu-img"
-              width="264"
-              alt="Camila Garcia - a young women in a pimk sweater"
-            />
+            <img src="./images/people/woman.jpg" class="staff-menu-img" width="264" alt="Camila Garcia - a young women in a pimk sweater"/>
             <h3 class="staff-name">Camila Garcia</h3>
             <p class="staff-occupation">Marketing</p>
           </li>
           <li class="staff-menu-item">
-            <img
-              src="./images/people/third-men.jpg"
-              class="staff-menu-img"
-              width="264"
-              alt="Daniel Wilson - a young men is a grey T-shirt"
-            />
+            <img src="./images/people/third-men.jpg" class="staff-menu-img" width="264" alt="Daniel Wilson - a young men is a grey T-shirt"/>
             <h3 class="staff-name">Daniel Wilson</h3>
             <p class="staff-occupation">UI Designer</p>
           </li>
@@ -150,56 +130,32 @@
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-menu list">
           <li class="portfolio-menu-item">
-            <img
-              src="./images/portfolio/bank.jpg" class="portfolio-menu-img"
-              width="360"
-              alt="Banking App"
-            />
+            <img src="./images/portfolio/bank.jpg" class="portfolio-menu-img" width="360" alt="Banking App"/>
             <h3 class="portfolio-name">Banking App</h3>
             <p class="portfolio-mathod">App</p>
           </li>
           <li class="portfolio-menu-item">
-            <img
-              src="./images/portfolio/contactless.jpg" class="portfolio-menu-img"
-              width="360"
-              alt="Cashless Payment"
-            />
+            <img src="./images/portfolio/contactless.jpg" class="portfolio-menu-img" width="360" alt="Cashless Payment"/>
             <h3 class="portfolio-name">Cashless Payment</h3>
             <p class="portfolio-mathod">Marketing</p>
           </li>
           <li class="portfolio-menu-item">
-            <img
-              src="./images/portfolio/laptop.jpg" class="portfolio-menu-img"
-              width="360"
-              alt="Laptop screen"
-            />
+            <img src="./images/portfolio/laptop.jpg" class="portfolio-menu-img" width="360" alt="Laptop screen"/>
             <h3 class="portfolio-name">Meditation App</h3>
             <p class="portfolio-mathod">App</p>
           </li>
           <li class="portfolio-menu-item">
-            <img
-              src="./images/portfolio/taxi.jpg" class="portfolio-menu-img"
-              width="360"
-              alt="Driving wheel"
-            />
+            <img src="./images/portfolio/taxi.jpg" class="portfolio-menu-img" width="360" alt="Driving wheel"/>
             <h3 class="portfolio-name">Taxi Service</h3>
             <p class="portfolio-mathod">Marketing</p>
           </li>
           <li class="portfolio-menu-item">
-            <img
-              src="./images/portfolio/screen.jpg" class="portfolio-menu-img"
-              width="360"
-              alt="Screen Illustrations"
-            />
+            <img src="./images/portfolio/screen.jpg" class="portfolio-menu-img" width="360" alt="Screen Illustrations"/>
             <h3 class="portfolio-name">Screen Illustrations</h3>
             <p class="portfolio-mathod">Design</p>
           </li>
           <li class="portfolio-menu-item">
-            <img
-              src="./images/portfolio/online.jpg" class="portfolio-menu-img"
-              width="360"
-              alt="Girl with the headphones"
-            />
+            <img src="./images/portfolio/online.jpg" class="portfolio-menu-img" width="360" alt="Girl with the headphones"/>
             <h3 class="portfolio-name">Online Courses</h3>
             <p class="portfolio-mathod">Marketing</p>
           </li>
