--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <h2 class="staff-title">Our Team</h2>
         <ul class="staff-menu list">
           <li class="staff-menu-item">
-            <img src="./images/people/first-men.jpg" class="staff-menu-img" width="264" alt="Mark Guerrero - a man with a blue shirt and black beard"/>
+            <img src="./images/people/first-men .jpg" class="staff-menu-img" width="264" alt="Mark Guerrero - a man with a blue shirt and black beard"/>
             <h3 class="staff-name">Mark Guerrero</h3>
             <p class="staff-occupation">Product Designer</p>
           </li>
@@ -125,42 +125,43 @@
           </li>
         </ul>
       </section>
-      
+     <!-- Portfolio section -->
       <section class="portfolio-section">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-menu list">
           <li class="portfolio-menu-item">
             <img src="./images/portfolio/bank.jpg" class="portfolio-menu-img" width="360" alt="Banking App"/>
             <h3 class="portfolio-name">Banking App</h3>
-            <p class="portfolio-mathod">App</p>
+            <p class="portfolio-method">App</p>
           </li>
           <li class="portfolio-menu-item">
             <img src="./images/portfolio/contactless.jpg" class="portfolio-menu-img" width="360" alt="Cashless Payment"/>
             <h3 class="portfolio-name">Cashless Payment</h3>
-            <p class="portfolio-mathod">Marketing</p>
+            <p class="portfolio-method">Marketing</p>
           </li>
           <li class="portfolio-menu-item">
             <img src="./images/portfolio/laptop.jpg" class="portfolio-menu-img" width="360" alt="Laptop screen"/>
             <h3 class="portfolio-name">Meditation App</h3>
-            <p class="portfolio-mathod">App</p>
+            <p class="portfolio-method">App</p>
           </li>
           <li class="portfolio-menu-item">
             <img src="./images/portfolio/taxi.jpg" class="portfolio-menu-img" width="360" alt="Driving wheel"/>
             <h3 class="portfolio-name">Taxi Service</h3>
-            <p class="portfolio-mathod">Marketing</p>
+            <p class="portfolio-method">Marketing</p>
           </li>
           <li class="portfolio-menu-item">
             <img src="./images/portfolio/screen.jpg" class="portfolio-menu-img" width="360" alt="Screen Illustrations"/>
             <h3 class="portfolio-name">Screen Illustrations</h3>
-            <p class="portfolio-mathod">Design</p>
+            <p class="portfolio-method">Design</p>
           </li>
           <li class="portfolio-menu-item">
             <img src="./images/portfolio/online.jpg" class="portfolio-menu-img" width="360" alt="Girl with the headphones"/>
             <h3 class="portfolio-name">Online Courses</h3>
-            <p class="portfolio-mathod">Marketing</p>
+            <p class="portfolio-method">Marketing</p>
           </li>
         </ul>
       </section>
+    <!-- Portfolio section -->
     </main>
     <!-- Footer -->
     <footer class="footer-section">
@@ -172,5 +173,6 @@
         marketing & growth solutions.
       </p>
     </footer>
+  <!-- Footer -->
   </body>
 </html>
